# backend

./: README.md  pyproject.toml
.github/workflows/: master_qualityslop.yml  staging_qualityslop(staging).yml
src/qs/: events_data.py  exceptions.py  prompting.py
src/qs/contrib/litestar/: settings.py
src/qs/game/: player.py  session.py  stocks.py
src/qs/resources/: financial_events_2005_2010.csv
src/qs/server/: dependencies.py  llm_client.py  routes.py  schemas.py  settings.py
src/qs/utils/: lifestyle.py
